<resources>
    <string name="app_name">ImageGalleryAndGIFGenerator</string>

    <!--Login Activity-->
    <string name="ent_mail">Entry e-mail</string>
    <string name="ent_pass">Entry password</string>
    <string name="accept">Accept</string>
    <string name="apply">Apply</string>
    <string name="action_settings">Settings</string>
    <string name="textViewUserNameHint">UserName</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_field_required">This field is required</string>


    <!--Registration Activity-->
    <string name="registration_user_name">name </string>
    <string name="registration_user_email">email</string>
    <string name="registration_user_password">password</string>
    <string name="registration_user_confirm_password">confirm password</string>
    <string name="registration_sign_up">sign up</string>

    <!--Error texts-->
    <string name="error_empty_files_email_password"><b>Fields: email,password, cannot be empty</b></string>
    <string name="error_empty_files_email_password_confim_pass_word_avatar"><b>fields: email,password, confim pass word,cannot be empty.\n
                                                                      Please choose an avatar. </b>
    </string>
    <string name="error_empty_files_email_password_avatar"><b>fields: email,password, cannot be empty.\n
                                                                      Please choose an avatar. </b>
    </string>
    <string name="error_empty_email"><b>field email cannot be empty.</b>
    </string>
    <string name="error_empty_password"><b>fields:password, cannot be empty.\n</b>
    </string>
    <string name="error_empty_password_avatar"><b>fields: email,password, cannot be empty.\n
                                                                      Please choose an avatar. </b>
    </string>

    <string name="error_password_confim_pass_word"><b>fields: password, confim pass word,cannot be empty.\n </b></string>
    <string name="error_confim_pass_word"><b>fields confim password,cannot be empty.\n </b></string>

    <string name="error_passwords_should_match"><b>passwords should match. </b>
    </string>
    <string name="error_empty_avatar"><b>Please choose an avatar. </b>
    </string>
    <string name="textView_circle_ImageView_sign_up_text">Click for the choice of an avatar</string>


    <string name="permission_necessary">Access to storage</string>
    <string name="storage_permission_is_encessary_to_wrote_event">It is necessary to provide access
        to storage for correct operation of application</string>
    <string name="card_picher_fragment_text_view_weather_text">Weather</string>
    <string name="card_picher_fragment_textView_address_text">address</string>


    <!--Dashboard Item-->
    <string name="dashboard_weather">Sunny weather</string>
    <string name="dashboard_address">Sample St,8a, Kyiv, Ukraine</string>

    <string name="add_Image">Add image</string>
    <string name="generate_gif">generate gif</string>


    <!--Upload Image Activity-->
    <string name="hash_tag">#hashtag</string>
    <string name="description">description</string>
    <string name="upload_start">uploading...</string>
    <string name="up_lod_image">up lod image</string>
    <string name="pick_up_image_error">Oops. Please choose image and press up lod image</string>
    <string name="eror_no_internet_connect">There is no connection to the Internet, please check connection</string>
    <string name="Ok">Ok</string>
    <string name="massage_textView_text">You are sure that you want to exit?</string>
    <string name="exit_and_save_session_textView_text">exit and save session</string>
    <string name="exit_and_log_out_textView_text">exit and log out</string>
    <string name="New_user_created">New user created</string>


</resources>
