<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/sidebar_login"
    android:orientation="vertical"
    tools:context=".screean.ExitActivity">

    <TextView
        android:id="@+id/massage_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_border"
        android:gravity="center"
        android:padding="@dimen/padding_inside_textview_exit"
        android:text="@string/massage_textView_text"
        android:textColor="@color/orange_dark"
        android:textSize="@dimen/text_size_exit_textView" />

    <TextView
        android:id="@+id/exit_and_save_session_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_border"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/padding_inside_textview_exit"
        android:text="@string/exit_and_save_session_textView_text"
        android:textColor="@color/orange_dark"
        android:textSize="@dimen/text_size_exit_textView" />


    <TextView
        android:id="@+id/exit_and_log_out_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_border"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/padding_inside_textview_exit"
        android:text="@string/exit_and_log_out_textView_text"
        android:textColor="@color/orange_dark"
        android:textSize="@dimen/text_size_exit_textView" />

</LinearLayout>