<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sidebar_login"
    tools:context=".screean.authorization.signUp.Register">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_padding"
        android:paddingTop="@dimen/activity_padding"
        android:paddingRight="@dimen/activity_padding"
        android:paddingBottom="@dimen/activity_padding">


        <ImageView
            android:id="@+id/circleImageView_sign_up"
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:layout_margin="30dp"
            android:background="@drawable/user_profile_image_background"
            android:clickable="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="80dp" />


        <TextView
            android:id="@+id/tv_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text=""
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView_sign_up" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/gray_tint"
            android:hint="@string/registration_user_name"
            android:inputType="textWebEditText"
            android:textColor="@color/white"
            android:textColorHint="@color/orange_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_error"
            tools:layout_editor_absoluteX="0dp" />


        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/gray_tint"
            android:hint="@string/registration_user_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/orange_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_user_name"
            tools:layout_editor_absoluteX="0dp" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/gray_tint"
            android:hint="@string/registration_user_password"
            android:inputType="textWebPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/orange_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/gray_tint"
            android:hint="@string/registration_user_confirm_password"
            android:inputType="textWebPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/orange_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/bt_registration_sign_up"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@color/gray_tint"
            android:text="@string/registration_sign_up"
            android:textColor="@color/orange_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_confirm_password"
            tools:layout_editor_absoluteX="0dp" />

        <ProgressBar
            android:id="@+id/pb_registration"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_circle_ImageView_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/textView_circle_ImageView_sign_up_text"
            android:textColor="@color/red_dark"
            app:layout_constraintBottom_toBottomOf="@+id/circleImageView_sign_up"
            app:layout_constraintEnd_toEndOf="@+id/circleImageView_sign_up"
            app:layout_constraintStart_toStartOf="@+id/circleImageView_sign_up"
            app:layout_constraintTop_toTopOf="@+id/circleImageView_sign_up" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>